# suitesparse_splitbuild

./: .gitignore  README.md  build.bash  sync.bash
addons/AMD/: configure.ac
addons/AMD/Doc/: Makefile.am
addons/AMD/Source/: Makefile.am
addons/BTF/: configure.ac
addons/BTF/Source/: Makefile.am
addons/CAMD/: configure.ac
addons/CAMD/Doc/: Makefile.am
addons/CAMD/Source/: Makefile.am
addons/CCOLAMD/: configure.ac
addons/CCOLAMD/Source/: Makefile.am
addons/CHOLMOD/: Makefile.am  configure.ac
addons/CHOLMOD/Check/: Makefile.am
addons/CHOLMOD/Cholesky/: Makefile.am
addons/CHOLMOD/Core/: Makefile.am
addons/CHOLMOD/Demo/: Makefile.am
addons/CHOLMOD/Doc/: Makefile.am
addons/CHOLMOD/GPU/: Makefile.am
addons/CHOLMOD/Include/: Makefile.am
addons/CHOLMOD/MatrixOps/: Makefile.am
addons/CHOLMOD/Modify/: Makefile.am
addons/CHOLMOD/Partition/: Makefile.am
addons/CHOLMOD/Supernodal/: Makefile.am
addons/COLAMD/: configure.ac
addons/COLAMD/Source/: Makefile.am
addons/CSparse/: configure.ac  csparse.pc.in
addons/CSparse/Demo/: Makefile.am
addons/CSparse/Source/: Makefile.am
addons/CXSparse/: configure.ac
addons/CXSparse/Source/: Makefile.am
addons/KLU/: configure.ac
addons/KLU/Doc/: Makefile.am
addons/KLU/Source/: Makefile.am
addons/LDL/: configure.ac
addons/LDL/Doc/: Makefile.am
addons/LDL/Source/: Makefile.am
addons/RBio/: configure.ac
addons/RBio/Source/: Makefile.am
addons/SPQR/: configure.ac
addons/SPQR/Doc/: Makefile.am
addons/SuiteSparse_config/: Makefile.am  configure.ac
addons/UMFPACK/: configure.ac
addons/UMFPACK/Doc/: Makefile.am
addons/UMFPACK/Source/: Makefile.am
